--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
       <p>{% if site.show_onglets %}
+	<a href="https://jacqkevin.github.io/" class="btn" role="button">Main</a>
 	<a href="https://jacqkevin.github.io/HSI_PLSR/" class="btn" role="button">PLS regression</a>
 	<a href="https://jacqkevin.github.io/HSI_Regression/" class="btn" role="button">Regression</a>
 	<a href="https://jacqkevin.github.io/HSI_Spectral_Indices/" class="btn" role="button">Indices</a>
